[gd_scene load_steps=3 format=3 uid="uid://dhrxmptlpu4vr"]

[ext_resource type="Script" path="res://Scenes/HUD/hud.gd" id="1_c1d2t"]
[ext_resource type="Theme" uid="uid://v4r4tr7yallg" path="res://Scenes/HUD/hud_theme.tres" id="2_fc7ud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_c1d2t")

[node name="MainHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainHUD"]
layout_mode = 1
offset_right = 258.0
offset_bottom = 168.0
theme = ExtResource("2_fc7ud")
theme_override_constants/separation = 0

[node name="BBs" type="Label" parent="MainHUD/VBoxContainer"]
layout_mode = 2
text = "Bullets: 0/0"

[node name="Mode" type="Label" parent="MainHUD/VBoxContainer"]
layout_mode = 2
text = "Mode: Single Shot"

[node name="BBMass" type="Label" parent="MainHUD/VBoxContainer"]
layout_mode = 2
text = "BB Mass: 0,2g"

[node name="HopUp" type="Label" parent="MainHUD/VBoxContainer"]
layout_mode = 2
text = "Hop Up: "

[node name="VBoxContainer2" type="VBoxContainer" parent="MainHUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 803.0
offset_right = 1107.0
offset_bottom = 42.0
grow_horizontal = 0
size_flags_horizontal = 8

[node name="BalloonsPopped" type="Label" parent="MainHUD/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_fc7ud")
text = "Balloons Popped: 0/0"

[node name="FinishPanel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_fc7ud")

[node name="VBoxContainer" type="VBoxContainer" parent="FinishPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = -21.0
offset_right = 116.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="CircuitFinished" type="Label" parent="FinishPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Circuit Finished!"
horizontal_alignment = 1

[node name="BalloonsPopped" type="Label" parent="FinishPanel/VBoxContainer"]
layout_mode = 2
text = "Balloon Popped: 0/0"
horizontal_alignment = 1

[node name="Restart" type="Button" parent="FinishPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Restart
"

[connection signal="pressed" from="FinishPanel/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
